# snowflake-mcp-remote

./: CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.github  QUICKREF.md  README-GITHUB.md  README.md  cloudbuild-github.yaml  cloudbuild.yaml  github_server.py  pyproject.toml  requirements.txt  server.py  test_mcp.py
